--- a/app/create.html
+++ b/app/create.html
@@ -15,7 +15,8 @@
   z-index: 1;
 }
 .create-title {
-  font-size: 1.6rem;
+  font-family: var(--font-display);
+  font-size: 1.8rem;
   font-weight: 200;
   letter-spacing: 0.15em;
   text-align: center;
