--- a/app/about.html
+++ b/app/about.html
@@ -15,7 +15,8 @@
   z-index: 1;
 }
 .about-title {
-  font-size: 1.4rem;
+  font-family: var(--font-display);
+  font-size: 1.6rem;
   font-weight: 200;
   letter-spacing: 0.2em;
   margin-bottom: 2.5rem;
@@ -35,8 +36,9 @@
   margin: 3rem 0;
 }
 .about-quote {
-  font-size: 1rem;
-  font-weight: 200;
+  font-family: var(--font-display);
+  font-size: 1.05rem;
+  font-weight: 300;
   line-height: 2.4;
   color: rgba(255,255,255,0.5);
   font-style: italic;
