--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 }
 
 /* ===== 揭幕动画 ===== */
+/* 序列：纯黑(0s) → 文字淡入(0-2s) → 停留(2-3s) → 星空渐显(3-5s) → 内容揭幕(5-6s) */
 .reveal-overlay {
   position: fixed; inset: 0;
   z-index: 9000;
@@ -30,40 +31,39 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 
 .reveal-title {
   font-family: var(--font-display);
-  font-size: clamp(3.5rem, 12vw, 9rem);
-  font-weight: 200;
-  letter-spacing: 0.25em;
+  font-size: clamp(4rem, 10vw, 8rem);
+  font-weight: 300;
+  letter-spacing: 0.2em;
   overflow: hidden;
   display: flex;
   gap: 0.02em;
 }
 .reveal-title .char {
   display: inline-block;
-  transform: translateY(120%);
   opacity: 0;
+  filter: blur(8px);
 }
 .reveal-sub {
-  margin-top: 1.5rem;
-  font-size: clamp(0.6rem, 1.4vw, 0.8rem);
+  margin-top: 1.8rem;
+  font-size: clamp(0.6rem, 1.3vw, 0.78rem);
   font-weight: 300;
   letter-spacing: 0.6em;
   color: var(--white-dim);
   opacity: 0;
-  transform: translateY(20px);
 }
 .reveal-line {
   width: 0; height: 1px;
   background: linear-gradient(90deg, transparent, var(--gold), transparent);
-  margin-top: 2rem;
+  margin-top: 2.2rem;
 }
 .reveal-ver {
   position: absolute;
   bottom: 3rem;
-  font-size: 0.55rem;
+  font-size: 0.5rem;
   letter-spacing: 0.5em;
-  color: rgba(237,237,237,0.12);
+  color: rgba(237,237,237,0.1);
   opacity: 0;
-  transition: opacity 1s ease;
+  transition: opacity 1.2s ease;
 }
 
 /* ===== 主内容 ===== */
@@ -88,19 +88,19 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 }
 .hero-title {
   font-family: var(--font-display);
-  font-size: clamp(1.6rem, 4.5vw, 2.8rem);
-  font-weight: 200;
-  letter-spacing: 0.12em;
+  font-size: clamp(2rem, 6vw, 4rem);
+  font-weight: 300;
+  letter-spacing: 0.08em;
   color: var(--white);
-  margin-bottom: 0.6rem;
-  line-height: 1.4;
+  margin-bottom: 0.8rem;
+  line-height: 1.3;
 }
 .hero-sub {
-  font-size: clamp(0.6rem, 1.2vw, 0.75rem);
+  font-size: clamp(0.55rem, 1vw, 0.7rem);
   font-weight: 300;
-  letter-spacing: 0.35em;
+  letter-spacing: 0.4em;
   color: var(--white-dim);
-  margin-bottom: 2.5rem;
+  margin-bottom: 3rem;
 }
 .search-wrap {
   pointer-events: all;
@@ -353,11 +353,5 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 <script src="js/cursor.js"></script>
 <script src="js/nav.js"></script>
 <script src="js/starfield.js"></script>
-<script>
-setTimeout(() => {
-  const v = document.getElementById('revealVer');
-  if (v) v.style.opacity = '1';
-}, 2000);
-</script>
 </body>
 </html>
