--- a/app/index.html
+++ b/app/index.html
@@ -15,37 +15,68 @@ body { overflow: hidden; height: 100vh; cursor: none; }
   z-index: 0;
 }
 
-/* ===== 揭幕动画 ===== */
-/* 序列：纯黑(0s) → 文字淡入(0-2s) → 停留(2-3s) → 星空渐显(3-5s) → 内容揭幕(5-6s) */
+/* ===== 三阶段开屏 ===== */
+/* Phase 1: 几何焦点 → Phase 2: 形态溶解 → Phase 3: 文字凝聚 */
 .reveal-overlay {
   position: fixed; inset: 0;
   z-index: 9000;
-  background: var(--bg);
+  background: #050505;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   pointer-events: all;
 }
 .reveal-overlay.done { pointer-events: none; }
 
+/* Phase 1: 几何焦点 — 金色圆环 */
+.reveal-ring {
+  position: absolute;
+  width: 80px; height: 80px;
+  border: 1px solid rgba(212,165,116,0.6);
+  border-radius: 50%;
+  opacity: 0;
+  transform: scale(0.3);
+  transition: none;
+}
+.reveal-ring .ring-inner {
+  position: absolute;
+  inset: 12px;
+  border: 1px solid rgba(212,165,116,0.25);
+  border-radius: 50%;
+}
+.reveal-ring .ring-dot {
+  position: absolute;
+  top: 50%; left: 50%;
+  width: 4px; height: 4px;
+  margin: -2px 0 0 -2px;
+  background: var(--gold);
+  border-radius: 50%;
+}
+
+/* Phase 3: 文字 */
+.reveal-text-wrap {
+  position: absolute;
+  text-align: center;
+  opacity: 0;
+}
 .reveal-title {
   font-family: var(--font-display);
   font-size: clamp(4rem, 10vw, 8rem);
   font-weight: 300;
   letter-spacing: 0.2em;
-  overflow: hidden;
   display: flex;
+  justify-content: center;
   gap: 0.02em;
 }
 .reveal-title .char {
   display: inline-block;
   opacity: 0;
-  filter: blur(8px);
+  transform: translateY(30px);
+  filter: blur(6px);
 }
 .reveal-sub {
-  margin-top: 1.8rem;
-  font-size: clamp(0.6rem, 1.3vw, 0.78rem);
+  margin-top: 1.5rem;
+  font-size: clamp(0.55rem, 1.2vw, 0.72rem);
   font-weight: 300;
   letter-spacing: 0.6em;
   color: var(--white-dim);
@@ -54,16 +85,7 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 .reveal-line {
   width: 0; height: 1px;
   background: linear-gradient(90deg, transparent, var(--gold), transparent);
-  margin-top: 2.2rem;
-}
-.reveal-ver {
-  position: absolute;
-  bottom: 3rem;
-  font-size: 0.5rem;
-  letter-spacing: 0.5em;
-  color: rgba(237,237,237,0.1);
-  opacity: 0;
-  transition: opacity 1.2s ease;
+  margin: 1.8rem auto 0;
 }
 
 /* ===== 主内容 ===== */
@@ -75,6 +97,25 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 }
 .main-wrap.visible { opacity: 1; visibility: visible; }
 
+/* ===== 相框式固定布局 ===== */
+/* 四角 + 边缘固定元素 */
+.frame-tl { position: fixed; top: 1.8rem; left: 3rem; z-index: 100; }
+.frame-tr { position: fixed; top: 1.8rem; right: 3rem; z-index: 100; }
+.frame-bl { position: fixed; bottom: 2rem; left: 3rem; z-index: 10; }
+.frame-br { position: fixed; bottom: 2rem; right: 3rem; z-index: 10; }
+.frame-ml { position: fixed; left: 3rem; top: 50%; transform: translateY(-50%); z-index: 5; }
+.frame-mr { position: fixed; right: 3rem; top: 50%; transform: translateY(-50%); z-index: 5; }
+
+/* 导航覆盖相框 */
+.nav { mix-blend-mode: difference; }
+.nav-logo {
+  font-family: var(--font-display);
+  font-size: 0.85rem;
+  font-weight: 300;
+  letter-spacing: 0.35em;
+}
+.nav-logo span { color: var(--gold); }
+
 /* ===== 中心内容 ===== */
 .center-content {
   position: fixed;
@@ -84,22 +125,24 @@ body { overflow: hidden; height: 100vh; cursor: none; }
   text-align: center;
   pointer-events: none;
   width: 90%;
-  max-width: 600px;
+  max-width: 650px;
 }
+/* 极端比例反差：巨型标题 vs 极小正文 */
 .hero-title {
   font-family: var(--font-display);
-  font-size: clamp(2rem, 6vw, 4rem);
+  font-size: clamp(2.2rem, 6.5vw, 4.5rem);
   font-weight: 300;
-  letter-spacing: 0.08em;
+  letter-spacing: 0.06em;
   color: var(--white);
-  margin-bottom: 0.8rem;
-  line-height: 1.3;
+  margin-bottom: 0.6rem;
+  line-height: 1.25;
 }
 .hero-sub {
-  font-size: clamp(0.55rem, 1vw, 0.7rem);
+  font-size: 0.6rem;
   font-weight: 300;
-  letter-spacing: 0.4em;
+  letter-spacing: 0.5em;
   color: var(--white-dim);
+  text-transform: uppercase;
   margin-bottom: 3rem;
 }
 .search-wrap {
@@ -111,11 +154,11 @@ body { overflow: hidden; height: 100vh; cursor: none; }
   border: none;
   border-bottom: 1px solid var(--border);
   color: var(--white);
-  font-size: 0.95rem;
+  font-size: 0.9rem;
   font-weight: 200;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.12em;
   padding: 0.6rem 0;
-  width: 220px;
+  width: 200px;
   text-align: center;
   outline: none;
   transition: border-color 0.3s, width 0.5s var(--ease-out);
@@ -123,7 +166,7 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 }
 .search-wrap input:focus {
   border-color: var(--gold);
-  width: 300px;
+  width: 280px;
 }
 .search-wrap input::placeholder { color: var(--white-faint); font-weight: 300; }
 
@@ -145,7 +188,7 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 }
 .search-results a:hover { color: var(--gold); }
 .search-results a .sr-breed {
-  font-size: 0.6rem;
+  font-size: 0.55rem;
   letter-spacing: 0.15em;
   color: var(--white-faint);
   margin-left: 0.5rem;
@@ -155,7 +198,7 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 .star-tip {
   position: fixed;
   z-index: 20;
-  background: rgba(10, 10, 15, 0.88);
+  background: rgba(5, 5, 5, 0.9);
   backdrop-filter: blur(16px);
   border: 1px solid var(--border);
   border-radius: 2px;
@@ -172,35 +215,26 @@ body { overflow: hidden; height: 100vh; cursor: none; }
   margin-bottom: 0.25rem;
 }
 .star-tip .tip-meta {
-  font-size: 0.6rem;
+  font-size: 0.55rem;
   letter-spacing: 0.15em;
   color: var(--white-dim);
 }
 .star-tip .tip-candles {
-  font-size: 0.6rem;
+  font-size: 0.55rem;
   color: var(--gold-dim);
   margin-top: 0.2rem;
 }
 
-/* ===== 底部 ===== */
-.bottom-bar {
-  position: fixed;
-  bottom: 0; left: 0; right: 0;
-  z-index: 10;
-  padding: 2rem 3rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
+/* ===== 相框边缘元素 ===== */
 .bottom-count {
-  font-size: 0.55rem;
-  letter-spacing: 0.35em;
-  color: var(--white-faint);
+  font-size: 0.5rem;
+  letter-spacing: 0.4em;
+  color: rgba(237,237,237,0.2);
   text-transform: uppercase;
 }
 .bottom-cta {
-  font-size: 0.55rem;
-  letter-spacing: 0.3em;
+  font-size: 0.5rem;
+  letter-spacing: 0.35em;
   color: var(--gold-dim);
   text-transform: uppercase;
   transition: color 0.3s, letter-spacing 0.4s var(--ease-out);
@@ -208,73 +242,70 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 }
 .bottom-cta:hover {
   color: var(--gold);
-  letter-spacing: 0.4em;
+  letter-spacing: 0.45em;
 }
 
-/* ===== 浮动背景文字 ===== */
+/* 左侧装饰 */
+.side-deco {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.6rem;
+}
+.side-deco .line {
+  width: 1px;
+  height: 50px;
+  background: linear-gradient(to bottom, transparent, rgba(212,165,116,0.15), transparent);
+}
+.side-deco .dot {
+  width: 3px; height: 3px;
+  border-radius: 50%;
+  background: rgba(212,165,116,0.2);
+}
+
+/* 右侧竖排文字 */
+.side-text {
+  writing-mode: vertical-rl;
+  font-size: 0.45rem;
+  letter-spacing: 0.4em;
+  color: rgba(237,237,237,0.12);
+  text-transform: uppercase;
+  animation: sideFloat 4s ease-in-out infinite;
+}
+@keyframes sideFloat {
+  0%, 100% { opacity: 0.12; transform: translateY(-50%) translateX(0); }
+  50% { opacity: 0.2; transform: translateY(-50%) translateX(-2px); }
+}
+
+/* 浮动背景文字 — 极低透明度 */
 .bg-text {
   position: fixed;
-  font-family: var(--font-display);
-  font-weight: 200;
-  letter-spacing: 0.3em;
-  color: rgba(255,255,255,0.015);
-  font-size: clamp(3rem, 11vw, 9rem);
+  font-family: var(--font-body);
+  font-weight: 800;
+  letter-spacing: 0.15em;
+  color: rgba(255,255,255,0.012);
+  font-size: clamp(4rem, 14vw, 12rem);
+  text-transform: uppercase;
   white-space: nowrap;
   z-index: 0;
   pointer-events: none;
   user-select: none;
 }
-.bg-text.t1 { top: 10%; left: -5%; }
-.bg-text.t2 { bottom: 8%; right: -5%; }
-
-/* ===== 左侧装饰线 ===== */
-.side-line {
-  position: fixed;
-  left: 3rem;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 5;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.8rem;
-}
-.side-line .line {
-  width: 1px;
-  height: 60px;
-  background: linear-gradient(to bottom, transparent, var(--border), transparent);
-}
-.side-line .dot {
-  width: 3px; height: 3px;
-  border-radius: 50%;
-  background: var(--gold-dim);
-}
-
-/* ===== 右侧滚动提示 ===== */
-.scroll-hint {
-  position: fixed;
-  right: 3rem;
-  bottom: 50%;
-  z-index: 5;
-  writing-mode: vertical-rl;
-  font-size: 0.5rem;
-  letter-spacing: 0.3em;
-  color: var(--white-faint);
-  text-transform: uppercase;
-  animation: hintFloat 3s ease-in-out infinite;
-}
-@keyframes hintFloat {
-  0%, 100% { opacity: 0.2; transform: translateY(0); }
-  50% { opacity: 0.45; transform: translateY(-5px); }
-}
+.bg-text.t1 { top: 8%; left: -5%; }
+.bg-text.t2 { bottom: 6%; right: -5%; }
 
 @media (max-width: 768px) {
-  .bottom-bar { padding: 1.2rem 1.5rem; }
-  .search-wrap input { width: 180px; cursor: auto; }
-  .search-wrap input:focus { width: 240px; }
+  .frame-tl, .frame-tr { top: 1.2rem; }
+  .frame-tl, .frame-bl, .frame-ml { left: 1.5rem; }
+  .frame-tr, .frame-br, .frame-mr { right: 1.5rem; }
+  .frame-bl, .frame-br { bottom: 1.2rem; }
+  .frame-ml, .frame-mr { display: none; }
+  .frame-tr .nav-links { display: none !important; }
+  .frame-tr .nav-burger { display: flex !important; }
+  .search-wrap input { width: 170px; cursor: auto; }
+  .search-wrap input:focus { width: 220px; }
   .search-results a { cursor: auto; }
   .bottom-cta { cursor: auto; }
-  .side-line, .scroll-hint { display: none; }
   body { cursor: auto; }
 }
 </style>
@@ -287,29 +318,40 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 <div class="cursor-ring" id="cRing"></div>
 <canvas id="starCanvas"></canvas>
 
-<!-- 揭幕 -->
+<!-- 三阶段开屏 -->
 <div class="reveal-overlay" id="revealOverlay">
-  <div class="reveal-title" id="revealTitle">
-    <span class="char">彩</span><span class="char">虹</span><span class="char">桥</span>
+  <!-- Phase 1: 几何焦点 -->
+  <div class="reveal-ring" id="revealRing">
+    <div class="ring-inner"></div>
+    <div class="ring-dot"></div>
   </div>
-  <div class="reveal-sub" id="revealSub">每一颗星，都是一个名字</div>
-  <div class="reveal-line" id="revealLine"></div>
-  <div class="reveal-ver" id="revealVer">v 1 . 0</div>
+  <!-- Phase 3: 文字凝聚 -->
+  <div class="reveal-text-wrap" id="revealTextWrap">
+    <div class="reveal-title" id="revealTitle">
+      <span class="char">彩</span><span class="char">虹</span><span class="char">桥</span>
+    </div>
+    <div class="reveal-sub" id="revealSub">每一颗星，都是一个名字</div>
+    <div class="reveal-line" id="revealLine"></div>
+  </div>
 </div>
 
-<!-- 主内容 -->
+<!-- 主内容：相框式布局 -->
 <div class="main-wrap" id="mainWrap">
-  <nav class="nav">
+  <!-- 左上：Logo -->
+  <div class="frame-tl">
     <a href="index.html" class="nav-logo" data-hover>彩虹<span>桥</span></a>
-    <ul class="nav-links">
-      <li><a href="index.html" data-hover>星 空</a></li>
-      <li><a href="create.html" data-hover onclick="event.preventDefault();navigateTo(this.href)">纪 念</a></li>
-      <li><a href="about.html" data-hover onclick="event.preventDefault();navigateTo(this.href)">关 于</a></li>
+  </div>
+  <!-- 右上：导航 -->
+  <div class="frame-tr">
+    <ul class="nav-links" style="list-style:none;display:flex;gap:2.5rem;">
+      <li><a href="index.html" data-hover style="font-size:0.6rem;font-weight:300;letter-spacing:0.3em;color:var(--white-dim);text-transform:uppercase;position:relative;transition:color 0.3s;">星空</a></li>
+      <li><a href="create.html" data-hover onclick="event.preventDefault();navigateTo(this.href)" style="font-size:0.6rem;font-weight:300;letter-spacing:0.3em;color:var(--white-dim);text-transform:uppercase;position:relative;transition:color 0.3s;">纪念</a></li>
+      <li><a href="about.html" data-hover onclick="event.preventDefault();navigateTo(this.href)" style="font-size:0.6rem;font-weight:300;letter-spacing:0.3em;color:var(--white-dim);text-transform:uppercase;position:relative;transition:color 0.3s;">关于</a></li>
     </ul>
     <div class="nav-burger" aria-label="菜单">
       <span></span><span></span><span></span>
     </div>
-  </nav>
+  </div>
 
   <div class="nav-mobile">
     <a href="index.html">星 空</a>
@@ -317,18 +359,28 @@ body { overflow: hidden; height: 100vh; cursor: none; }
     <a href="about.html">关 于</a>
   </div>
 
+  <!-- 左中：装饰线 -->
+  <div class="frame-ml">
+    <div class="side-deco">
+      <div class="line"></div>
+      <div class="dot"></div>
+      <div class="line"></div>
+    </div>
+  </div>
+
+  <!-- 右中：竖排文字 -->
+  <div class="frame-mr">
+    <div class="side-text">explore the stars</div>
+  </div>
+
+  <!-- 浮动背景文字 -->
   <div class="bg-text t1" id="bgT1">RAINBOW BRIDGE</div>
   <div class="bg-text t2" id="bgT2">永远的陪伴</div>
 
-  <div class="side-line">
-    <div class="line"></div>
-    <div class="dot"></div>
-    <div class="line"></div>
-  </div>
-
+  <!-- 中心 -->
   <div class="center-content">
-    <h1 class="hero-title">每一颗星，都是一次陪伴</h1>
-    <p class="hero-sub">点击星星，走进他们的故事</p>
+    <h1 class="hero-title">每一颗星<br>都是一次陪伴</h1>
+    <p class="hero-sub">点击星星 · 走进他们的故事</p>
     <div class="search-wrap">
       <input type="text" id="searchInput" placeholder="搜索名字..." autocomplete="off">
       <div class="search-results" id="searchResults"></div>
@@ -341,10 +393,12 @@ body { overflow: hidden; height: 100vh; cursor: none; }
     <div class="tip-candles"></div>
   </div>
 
-  <div class="scroll-hint">探 索 星 空</div>
-
-  <div class="bottom-bar">
+  <!-- 左下：计数 -->
+  <div class="frame-bl">
     <div class="bottom-count"><span id="totalCount">0</span> 颗星在闪烁</div>
+  </div>
+  <!-- 右下：CTA -->
+  <div class="frame-br">
     <a href="create.html" class="bottom-cta" data-hover onclick="event.preventDefault();navigateTo(this.href)">为他/她点亮一颗星 →</a>
   </div>
 </div>
