--- a/app/index.html
+++ b/app/index.html
@@ -15,77 +15,49 @@ body { overflow: hidden; height: 100vh; cursor: none; }
   z-index: 0;
 }
 
-/* ===== 三阶段开屏 ===== */
-/* Phase 1: 几何焦点 → Phase 2: 形态溶解 → Phase 3: 文字凝聚 */
+/* ===== 开屏：安静的光 ===== */
 .reveal-overlay {
   position: fixed; inset: 0;
   z-index: 9000;
   background: #050505;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   pointer-events: all;
 }
 .reveal-overlay.done { pointer-events: none; }
 
-/* Phase 1: 几何焦点 — 金色圆环 */
-.reveal-ring {
-  position: absolute;
-  width: 80px; height: 80px;
-  border: 1px solid rgba(212,165,116,0.6);
-  border-radius: 50%;
-  opacity: 0;
-  transform: scale(0.3);
-  transition: none;
-}
-.reveal-ring .ring-inner {
-  position: absolute;
-  inset: 12px;
-  border: 1px solid rgba(212,165,116,0.25);
-  border-radius: 50%;
-}
-.reveal-ring .ring-dot {
-  position: absolute;
-  top: 50%; left: 50%;
+/* 一颗星 */
+.reveal-star {
   width: 4px; height: 4px;
-  margin: -2px 0 0 -2px;
-  background: var(--gold);
   border-radius: 50%;
+  background: rgba(212,165,116,0.8);
+  opacity: 0;
+  box-shadow: 0 0 20px 6px rgba(212,165,116,0.15);
 }
 
-/* Phase 3: 文字 */
-.reveal-text-wrap {
-  position: absolute;
-  text-align: center;
-  opacity: 0;
-}
+/* 文字 */
 .reveal-title {
   font-family: var(--font-display);
-  font-size: clamp(4rem, 10vw, 8rem);
+  font-size: clamp(3.5rem, 9vw, 7rem);
   font-weight: 300;
   letter-spacing: 0.2em;
+  margin-top: 2rem;
   display: flex;
-  justify-content: center;
   gap: 0.02em;
 }
 .reveal-title .char {
   display: inline-block;
   opacity: 0;
-  transform: translateY(30px);
-  filter: blur(6px);
 }
 .reveal-sub {
-  margin-top: 1.5rem;
+  margin-top: 1.2rem;
   font-size: clamp(0.55rem, 1.2vw, 0.72rem);
   font-weight: 300;
-  letter-spacing: 0.6em;
+  letter-spacing: 0.5em;
   color: var(--white-dim);
   opacity: 0;
-}
-.reveal-line {
-  width: 0; height: 1px;
-  background: linear-gradient(90deg, transparent, var(--gold), transparent);
-  margin: 1.8rem auto 0;
 }
 
 /* ===== 主内容 ===== */
@@ -97,26 +69,40 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 }
 .main-wrap.visible { opacity: 1; visibility: visible; }
 
-/* ===== 相框式固定布局 ===== */
-/* 四角 + 边缘固定元素 */
+/* ===== 相框式布局 ===== */
 .frame-tl { position: fixed; top: 1.8rem; left: 3rem; z-index: 100; }
-.frame-tr { position: fixed; top: 1.8rem; right: 3rem; z-index: 100; }
+.frame-tr { position: fixed; top: 1.8rem; right: 3rem; z-index: 100; display: flex; align-items: center; gap: 2.5rem; }
 .frame-bl { position: fixed; bottom: 2rem; left: 3rem; z-index: 10; }
 .frame-br { position: fixed; bottom: 2rem; right: 3rem; z-index: 10; }
 .frame-ml { position: fixed; left: 3rem; top: 50%; transform: translateY(-50%); z-index: 5; }
 .frame-mr { position: fixed; right: 3rem; top: 50%; transform: translateY(-50%); z-index: 5; }
 
-/* 导航覆盖相框 */
-.nav { mix-blend-mode: difference; }
 .nav-logo {
   font-family: var(--font-display);
   font-size: 0.85rem;
   font-weight: 300;
   letter-spacing: 0.35em;
+  mix-blend-mode: difference;
 }
 .nav-logo span { color: var(--gold); }
 
-/* ===== 中心内容 ===== */
+.frame-nav {
+  list-style: none;
+  display: flex;
+  gap: 2.5rem;
+  mix-blend-mode: difference;
+}
+.frame-nav a {
+  font-size: 0.6rem;
+  font-weight: 300;
+  letter-spacing: 0.3em;
+  color: var(--white-dim);
+  text-transform: uppercase;
+  transition: color 0.3s;
+}
+.frame-nav a:hover { color: var(--white); }
+
+/* ===== 中心 ===== */
 .center-content {
   position: fixed;
   top: 50%; left: 50%;
@@ -125,30 +111,25 @@ body { overflow: hidden; height: 100vh; cursor: none; }
   text-align: center;
   pointer-events: none;
   width: 90%;
-  max-width: 650px;
+  max-width: 600px;
 }
-/* 极端比例反差：巨型标题 vs 极小正文 */
 .hero-title {
   font-family: var(--font-display);
-  font-size: clamp(2.2rem, 6.5vw, 4.5rem);
+  font-size: clamp(2rem, 6vw, 4rem);
   font-weight: 300;
   letter-spacing: 0.06em;
   color: var(--white);
   margin-bottom: 0.6rem;
-  line-height: 1.25;
+  line-height: 1.3;
 }
 .hero-sub {
   font-size: 0.6rem;
   font-weight: 300;
   letter-spacing: 0.5em;
   color: var(--white-dim);
-  text-transform: uppercase;
   margin-bottom: 3rem;
 }
-.search-wrap {
-  pointer-events: all;
-  position: relative;
-}
+.search-wrap { pointer-events: all; }
 .search-wrap input {
   background: transparent;
   border: none;
@@ -164,41 +145,26 @@ body { overflow: hidden; height: 100vh; cursor: none; }
   transition: border-color 0.3s, width 0.5s var(--ease-out);
   cursor: none;
 }
-.search-wrap input:focus {
-  border-color: var(--gold);
-  width: 280px;
-}
+.search-wrap input:focus { border-color: var(--gold); width: 280px; }
 .search-wrap input::placeholder { color: var(--white-faint); font-weight: 300; }
 
-/* 搜索结果 */
-.search-results {
-  pointer-events: all;
-  margin-top: 0.8rem;
-  display: none;
-}
+.search-results { pointer-events: all; margin-top: 0.8rem; display: none; }
 .search-results.active { display: block; }
 .search-results a {
-  display: block;
-  padding: 0.5rem 0;
-  font-size: 0.85rem;
-  font-weight: 300;
-  color: var(--white-dim);
-  transition: color 0.2s;
-  cursor: none;
+  display: block; padding: 0.5rem 0;
+  font-size: 0.85rem; font-weight: 300;
+  color: var(--white-dim); transition: color 0.2s; cursor: none;
 }
 .search-results a:hover { color: var(--gold); }
 .search-results a .sr-breed {
-  font-size: 0.55rem;
-  letter-spacing: 0.15em;
-  color: var(--white-faint);
-  margin-left: 0.5rem;
+  font-size: 0.55rem; letter-spacing: 0.15em;
+  color: var(--white-faint); margin-left: 0.5rem;
 }
 
-/* ===== 星星 tooltip ===== */
+/* ===== Tooltip ===== */
 .star-tip {
-  position: fixed;
-  z-index: 20;
-  background: rgba(5, 5, 5, 0.9);
+  position: fixed; z-index: 20;
+  background: rgba(5,5,5,0.9);
   backdrop-filter: blur(16px);
   border: 1px solid var(--border);
   border-radius: 2px;
@@ -209,103 +175,97 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 }
 .star-tip .tip-name {
   font-family: var(--font-display);
-  font-size: 1rem;
-  font-weight: 300;
-  letter-spacing: 0.1em;
-  margin-bottom: 0.25rem;
+  font-size: 1rem; font-weight: 300;
+  letter-spacing: 0.1em; margin-bottom: 0.25rem;
 }
-.star-tip .tip-meta {
-  font-size: 0.55rem;
-  letter-spacing: 0.15em;
-  color: var(--white-dim);
-}
-.star-tip .tip-candles {
-  font-size: 0.55rem;
-  color: var(--gold-dim);
-  margin-top: 0.2rem;
-}
+.star-tip .tip-meta { font-size: 0.55rem; letter-spacing: 0.15em; color: var(--white-dim); }
+.star-tip .tip-candles { font-size: 0.55rem; color: var(--gold-dim); margin-top: 0.2rem; }
 
-/* ===== 相框边缘元素 ===== */
+/* ===== 边缘元素 ===== */
 .bottom-count {
-  font-size: 0.5rem;
-  letter-spacing: 0.4em;
-  color: rgba(237,237,237,0.2);
-  text-transform: uppercase;
+  font-size: 0.5rem; letter-spacing: 0.4em;
+  color: rgba(237,237,237,0.2); text-transform: uppercase;
 }
 .bottom-cta {
-  font-size: 0.5rem;
-  letter-spacing: 0.35em;
-  color: var(--gold-dim);
-  text-transform: uppercase;
-  transition: color 0.3s, letter-spacing 0.4s var(--ease-out);
-  cursor: none;
+  font-size: 0.5rem; letter-spacing: 0.35em;
+  color: var(--gold-dim); text-transform: uppercase;
+  transition: color 0.3s; cursor: none;
 }
-.bottom-cta:hover {
-  color: var(--gold);
-  letter-spacing: 0.45em;
-}
+.bottom-cta:hover { color: var(--gold); }
 
-/* 左侧装饰 */
 .side-deco {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.6rem;
+  display: flex; flex-direction: column;
+  align-items: center; gap: 0.6rem;
 }
 .side-deco .line {
-  width: 1px;
-  height: 50px;
-  background: linear-gradient(to bottom, transparent, rgba(212,165,116,0.15), transparent);
+  width: 1px; height: 50px;
+  background: linear-gradient(to bottom, transparent, rgba(212,165,116,0.12), transparent);
 }
 .side-deco .dot {
-  width: 3px; height: 3px;
-  border-radius: 50%;
-  background: rgba(212,165,116,0.2);
+  width: 3px; height: 3px; border-radius: 50%;
+  background: rgba(212,165,116,0.15);
 }
 
-/* 右侧竖排文字 */
 .side-text {
   writing-mode: vertical-rl;
-  font-size: 0.45rem;
-  letter-spacing: 0.4em;
-  color: rgba(237,237,237,0.12);
-  text-transform: uppercase;
-  animation: sideFloat 4s ease-in-out infinite;
-}
-@keyframes sideFloat {
-  0%, 100% { opacity: 0.12; transform: translateY(-50%) translateX(0); }
-  50% { opacity: 0.2; transform: translateY(-50%) translateX(-2px); }
+  font-size: 0.45rem; letter-spacing: 0.4em;
+  color: rgba(237,237,237,0.1);
 }
 
-/* 浮动背景文字 — 极低透明度 */
+/* 浮动背景文字 */
 .bg-text {
   position: fixed;
   font-family: var(--font-body);
-  font-weight: 800;
-  letter-spacing: 0.15em;
+  font-weight: 800; letter-spacing: 0.15em;
   color: rgba(255,255,255,0.012);
   font-size: clamp(4rem, 14vw, 12rem);
   text-transform: uppercase;
   white-space: nowrap;
-  z-index: 0;
-  pointer-events: none;
-  user-select: none;
+  z-index: 0; pointer-events: none; user-select: none;
 }
 .bg-text.t1 { top: 8%; left: -5%; }
 .bg-text.t2 { bottom: 6%; right: -5%; }
 
+/* 汉堡菜单 */
+.nav-burger {
+  display: none;
+  flex-direction: column;
+  gap: 5px; cursor: pointer; padding: 4px; z-index: 200;
+}
+.nav-burger span {
+  display: block; width: 22px; height: 1px;
+  background: var(--white-dim);
+  transition: transform 0.4s var(--ease-out), opacity 0.3s;
+}
+.nav-burger.open span:nth-child(1) { transform: translateY(6px) rotate(45deg); }
+.nav-burger.open span:nth-child(2) { opacity: 0; }
+.nav-burger.open span:nth-child(3) { transform: translateY(-6px) rotate(-45deg); }
+
+.nav-mobile {
+  display: none; position: fixed; inset: 0; z-index: 150;
+  background: rgba(10,10,15,0.96); backdrop-filter: blur(20px);
+  flex-direction: column; align-items: center; justify-content: center; gap: 2.5rem;
+  opacity: 0; transition: opacity 0.5s var(--ease-smooth);
+}
+.nav-mobile.open { display: flex; opacity: 1; }
+.nav-mobile a {
+  font-family: var(--font-display);
+  font-size: 1.4rem; font-weight: 200;
+  letter-spacing: 0.4em; color: var(--white-dim); transition: color 0.3s;
+}
+.nav-mobile a:hover { color: var(--gold); }
+
 @media (max-width: 768px) {
   .frame-tl, .frame-tr { top: 1.2rem; }
-  .frame-tl, .frame-bl, .frame-ml { left: 1.5rem; }
-  .frame-tr, .frame-br, .frame-mr { right: 1.5rem; }
+  .frame-tl, .frame-bl { left: 1.5rem; }
+  .frame-tr, .frame-br { right: 1.5rem; }
   .frame-bl, .frame-br { bottom: 1.2rem; }
   .frame-ml, .frame-mr { display: none; }
-  .frame-tr .nav-links { display: none !important; }
-  .frame-tr .nav-burger { display: flex !important; }
+  .frame-nav { display: none !important; }
+  .nav-burger { display: flex !important; }
   .search-wrap input { width: 170px; cursor: auto; }
   .search-wrap input:focus { width: 220px; }
-  .search-results a { cursor: auto; }
-  .bottom-cta { cursor: auto; }
+  .search-results a, .bottom-cta { cursor: auto; }
   body { cursor: auto; }
 }
 </style>
@@ -318,35 +278,25 @@ body { overflow: hidden; height: 100vh; cursor: none; }
 <div class="cursor-ring" id="cRing"></div>
 <canvas id="starCanvas"></canvas>
 
-<!-- 三阶段开屏 -->
+<!-- 开屏：一颗星，然后是文字 -->
 <div class="reveal-overlay" id="revealOverlay">
-  <!-- Phase 1: 几何焦点 -->
-  <div class="reveal-ring" id="revealRing">
-    <div class="ring-inner"></div>
-    <div class="ring-dot"></div>
+  <div class="reveal-star" id="revealStar"></div>
+  <div class="reveal-title" id="revealTitle">
+    <span class="char">彩</span><span class="char">虹</span><span class="char">桥</span>
   </div>
-  <!-- Phase 3: 文字凝聚 -->
-  <div class="reveal-text-wrap" id="revealTextWrap">
-    <div class="reveal-title" id="revealTitle">
-      <span class="char">彩</span><span class="char">虹</span><span class="char">桥</span>
-    </div>
-    <div class="reveal-sub" id="revealSub">每一颗星，都是一个名字</div>
-    <div class="reveal-line" id="revealLine"></div>
-  </div>
+  <div class="reveal-sub" id="revealSub">每一颗星，都是一个名字</div>
 </div>
 
-<!-- 主内容：相框式布局 -->
+<!-- 主内容 -->
 <div class="main-wrap" id="mainWrap">
-  <!-- 左上：Logo -->
   <div class="frame-tl">
     <a href="index.html" class="nav-logo" data-hover>彩虹<span>桥</span></a>
   </div>
-  <!-- 右上：导航 -->
   <div class="frame-tr">
-    <ul class="nav-links" style="list-style:none;display:flex;gap:2.5rem;">
-      <li><a href="index.html" data-hover style="font-size:0.6rem;font-weight:300;letter-spacing:0.3em;color:var(--white-dim);text-transform:uppercase;position:relative;transition:color 0.3s;">星空</a></li>
-      <li><a href="create.html" data-hover onclick="event.preventDefault();navigateTo(this.href)" style="font-size:0.6rem;font-weight:300;letter-spacing:0.3em;color:var(--white-dim);text-transform:uppercase;position:relative;transition:color 0.3s;">纪念</a></li>
-      <li><a href="about.html" data-hover onclick="event.preventDefault();navigateTo(this.href)" style="font-size:0.6rem;font-weight:300;letter-spacing:0.3em;color:var(--white-dim);text-transform:uppercase;position:relative;transition:color 0.3s;">关于</a></li>
+    <ul class="frame-nav">
+      <li><a href="index.html" data-hover>星空</a></li>
+      <li><a href="create.html" data-hover onclick="event.preventDefault();navigateTo(this.href)">纪念</a></li>
+      <li><a href="about.html" data-hover onclick="event.preventDefault();navigateTo(this.href)">关于</a></li>
     </ul>
     <div class="nav-burger" aria-label="菜单">
       <span></span><span></span><span></span>
@@ -359,25 +309,12 @@ body { overflow: hidden; height: 100vh; cursor: none; }
     <a href="about.html">关 于</a>
   </div>
 
-  <!-- 左中：装饰线 -->
-  <div class="frame-ml">
-    <div class="side-deco">
-      <div class="line"></div>
-      <div class="dot"></div>
-      <div class="line"></div>
-    </div>
-  </div>
+  <div class="frame-ml"><div class="side-deco"><div class="line"></div><div class="dot"></div><div class="line"></div></div></div>
+  <div class="frame-mr"><div class="side-text">explore the stars</div></div>
 
-  <!-- 右中：竖排文字 -->
-  <div class="frame-mr">
-    <div class="side-text">explore the stars</div>
-  </div>
-
-  <!-- 浮动背景文字 -->
   <div class="bg-text t1" id="bgT1">RAINBOW BRIDGE</div>
   <div class="bg-text t2" id="bgT2">永远的陪伴</div>
 
-  <!-- 中心 -->
   <div class="center-content">
     <h1 class="hero-title">每一颗星<br>都是一次陪伴</h1>
     <p class="hero-sub">点击星星 · 走进他们的故事</p>
@@ -393,14 +330,8 @@ body { overflow: hidden; height: 100vh; cursor: none; }
     <div class="tip-candles"></div>
   </div>
 
-  <!-- 左下：计数 -->
-  <div class="frame-bl">
-    <div class="bottom-count"><span id="totalCount">0</span> 颗星在闪烁</div>
-  </div>
-  <!-- 右下：CTA -->
-  <div class="frame-br">
-    <a href="create.html" class="bottom-cta" data-hover onclick="event.preventDefault();navigateTo(this.href)">为他/她点亮一颗星 →</a>
-  </div>
+  <div class="frame-bl"><div class="bottom-count"><span id="totalCount">0</span> 颗星在闪烁</div></div>
+  <div class="frame-br"><a href="create.html" class="bottom-cta" data-hover onclick="event.preventDefault();navigateTo(this.href)">为他/她点亮一颗星 →</a></div>
 </div>
 
 <script src="js/data.js"></script>
