--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,11 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>彩虹桥 — 每一颗星，都是一个名字</title>
 <link rel="stylesheet" href="css/core.css">
 <style>
-body { overflow: hidden; height: 100vh; cursor: none; }
+body { overflow: hidden; height: 100vh; height: 100dvh; cursor: none; }
 
 #starCanvas {
   position: fixed;
