--- a/app/memorial.html
+++ b/app/memorial.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>纪念馆 — 彩虹桥</title>
 <link rel="stylesheet" href="css/core.css">
 <link rel="stylesheet" href="css/memorial.css">
