--- a/app/create.html
+++ b/app/create.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>点亮一颗星 — 彩虹桥</title>
+<link rel="icon" href="favicon.svg" type="image/svg+xml">
 <link rel="stylesheet" href="css/core.css">
 <style>
 body { overflow: hidden; height: 100vh; height: 100dvh; cursor: none; }
