--- a/app/about.html
+++ b/app/about.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>关于 — 彩虹桥</title>
+<meta name="description" content="彩虹桥是一个为宠物建造的纪念空间。每一只被记住的毛孩子，都会成为星空中的一颗星。">
+<meta name="theme-color" content="#0a0a0f">
 <link rel="icon" href="favicon.svg" type="image/svg+xml">
 <link rel="stylesheet" href="css/core.css">
 <link rel="icon" href="favicon.svg" type="image/svg+xml">
