--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>彩虹桥 — 每一颗星，都是一个名字</title>
+<meta name="description" content="为离开的毛孩子点亮一颗星。彩虹桥是一个安静的宠物纪念空间。">
+<meta property="og:title" content="彩虹桥 — 每一颗星，都是一个名字">
+<meta property="og:description" content="为离开的毛孩子点亮一颗星。">
+<meta property="og:type" content="website">
+<meta name="theme-color" content="#0a0a0f">
 <link rel="icon" href="favicon.svg" type="image/svg+xml">
 <link rel="stylesheet" href="css/core.css">
 <style>
@@ -277,7 +282,7 @@ body { overflow: hidden; height: 100vh; height: 100dvh; cursor: none; }
 <div class="page-transition"></div>
 <div class="cursor-dot" id="cDot"></div>
 <div class="cursor-ring" id="cRing"></div>
-<canvas id="starCanvas"></canvas>
+<canvas id="starCanvas" aria-label="星空纪念墙 — 每颗星代表一只被纪念的宠物" role="img"></canvas>
 
 <!-- 开屏：一颗星，然后是文字 -->
 <div class="reveal-overlay" id="revealOverlay">
