cleanup: 移除 demos/ 和 _old/，部署目录精简
10个早期 demo 和旧版文件已移除（git 历史中保留）
部署目录从 380K 降至 ~100K

--- a/app/memorial.html
+++ b/app/memorial.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>纪念馆 — 彩虹桥</title>
+<meta name="description" content="一颗星，一段陪伴。在彩虹桥为他/她点亮蜡烛，写下思念。">
+<meta name="theme-color" content="#0a0a0f">
 <link rel="icon" href="favicon.svg" type="image/svg+xml">
 <link rel="stylesheet" href="css/core.css">
 <link rel="icon" href="favicon.svg" type="image/svg+xml">
